objects/Licenses__c.object
<CustomObject>
    <description>License custom object to capture business unit and number of licenses procured. Store threshold limit and alert notification email list here.</description>
    <fields>
        <fullName>Available_Licenses_Name__c</fullName>
        <description>Name of the Licenses Available under License Category</description>
        <inlineHelpText>Name of the Licenses Available under License Category</inlineHelpText>
        <label>Available Licenses Name</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>License_Catagories__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Available_Licenses_Name</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsDuplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check if combination of Procuring Business, License Type, License Name already exist. It work in combination with Flow and Validation Rule. This field is not on any page layout.</description>
        <label>IsDuplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License_Catagories__c</fullName>
        <description>Catagories of License Type</description>
        <inlineHelpText>Catagories of License Type</inlineHelpText>
        <label>License Catagories</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>License_Catagories</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>License_Number__c</fullName>
        <description>Auto Number Generated which is unique to each license with year and month, record is created</description>
        <displayFormat>LN#{YYYY}-{MM}-{000000}</displayFormat>
        <inlineHelpText>Unique Identifier generated for each license with year and month, given when record is created.</inlineHelpText>
        <label>License Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Licenses_Consumed__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of Licenses consumed</description>
        <inlineHelpText>Number of Licenses consumed</inlineHelpText>
        <label>Licenses Consumed</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_licenses_procured__c</fullName>
        <description>rollup summary of all License Procurements related records with status = active and business = Procuring Business.</description>
        <inlineHelpText>rollup summary of all License Procurements related records with status = active and business = Procuring Business.</inlineHelpText>
        <label>Number of licenses procured</label>
        <summarizedField>License_Procurement__c.Number_of_licenses_procured__c</summarizedField>
        <summaryFilterItems>
            <field>License_Procurement__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>License_Procurement__c.Licenses__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Procuring_Business__c</fullName>
        <description>Business procuring the license.</description>
        <inlineHelpText>Business procuring the license.</inlineHelpText>
        <label>Procuring Business</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Procuring_Business</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Threshold_Email_Notifications__c</fullName>
        <description>List of email addresses to send mail, when the threshold limit is reached.</description>
        <inlineHelpText>List of email addresses to send mail, when the threshold limit is reached.</inlineHelpText>
        <label>Threshold Email Notification List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Threshold_Limit__c</fullName>
        <description>Limit to monitor the licenses</description>
        <inlineHelpText>Limit when reached, will send mail to admins.</inlineHelpText>
        <label>Threshold Limit</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fRemaining_Licenses__c</fullName>
        <description>Formula to calculate the remaining license available for allotment.</description>
        <formula>FLOOR(Number_of_licenses_procured__c - Licenses_Consumed__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Remaining license(s) available for allotment.</inlineHelpText>
        <label>Remaining Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>License</label>
    <listViews>
        <fullName>All_Licenses</fullName>
        <columns>License_Number__c</columns>
        <columns>NAME</columns>
        <columns>Procuring_Business__c</columns>
        <columns>License_Catagories__c</columns>
        <columns>Available_Licenses_Name__c</columns>
        <columns>Number_of_licenses_procured__c</columns>
        <columns>Licenses_Consumed__c</columns>
        <columns>fRemaining_Licenses__c</columns>
        <columns>Threshold_Limit__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Licenses</label>
    </listViews>
    <nameField>
        <label>Licenses Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Licenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Unique_License</fullName>
        <active>true</active>
        <description>The combination of Procuring Business, License Type and License Type Name should be unique. Works with combination of flow</description>
        <errorConditionFormula>OR(AND(IsDuplicate__c = TRUE, ISNEW()), AND(IsDuplicate__c = TRUE, NOT(ISNEW()) , OR( ISCHANGED( Available_Licenses_Name__c ) , ISCHANGED( License_Catagories__c ) , ISCHANGED( Procuring_Business__c )) ) )</errorConditionFormula>
        <errorMessage>The Combination of Procuring Business, License Category and Available License Name already exist. Please choose different combination or use the original license record.</errorMessage>
    </validationRules>
</CustomObject>